# Hybrid-Shadows

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  readme.md
src/Common/: CMakeLists.txt  HybridRaytracer.json
src/DX12/: BlueNoise.cpp  BlueNoise.h  CMakeLists.txt  CSMManager.cpp  CSMManager.h  CustomShadowResolvePass.cpp  CustomShadowResolvePass.h  HybridRaytracer.cpp  HybridRaytracer.h  Raytracer.cpp  Raytracer.h  Renderer.cpp  Renderer.h  ShadowDenoiser.cpp  ShadowDenoiser.h  ShadowRaytracer.cpp  ShadowRaytracer.h  UI.cpp  UI.h  stdafx.h
src/Shaders/: Classify.hlsl  ClassifyDebug.hlsl  CustomShadowResolve.hlsl  RaytracingCommon.h  ResloveRaytracing.hlsl  ShadowRaytrace.hlsl  Utilities.h  filter_soft_shadows_pass_d3d12.hlsl  prepare_shadow_mask_d3d12.hlsl  tile_classification_d3d12.hlsl
